# zstandard

./: .gitignore  CHANGELOG.md  README.md
.github/: stale.yaml
.github/ISSUE_TEMPLATE/: bug_report.yml  chore_task.yml  config.yml  doc_update.yml  feature_request.yml  hotfix.yml  release.yml  template.md
.github/PULL_REQUEST_TEMPLATE/: template.md
.github/actions/local_file_setup/: action.yml
.github/workflows/: gbf_commit.yml  gbf_issue.yml  gbf_pull_request.yml  gbf_pull_request_review_comment.yml  gbf_update_ai_knowledge.yml  publish.yml  push_checks.yml  push_checks_android.yml  push_checks_cli.yml  push_checks_ios.yml  push_checks_linux.yml  push_checks_macos.yml  push_checks_platform_interface.yml  push_checks_web.yml  push_checks_windows.yml  push_checks_zstandard.yml  push_master_cli.yml  push_test_check.yml  push_test_check_android.yml  push_test_check_cli.yml  push_test_check_macos.yml  release_workflow.yml  stale.yaml  tag_version_and_publish.yml  tag_version_and_publish_platform_interface.yml  update_files.yml
local_file_setup/: action.yml
media/: README.md
zstandard/: CHANGELOG.md  README.md  pubspec.yaml
zstandard/example/: README.md  pubspec.yaml
zstandard/example/integration_test/: plugin_integration_test.dart
zstandard/example/lib/: main.dart
zstandard/example/linux/: CMakeLists.txt  my_application.cc
zstandard/example/test/: widget_test.dart
zstandard/example/web/: index.html  manifest.json  zstd.js  zstd.wasm
zstandard/example/windows/: CMakeLists.txt
zstandard/lib/: zstandard.dart
zstandard/lib/src/: platform_manager.dart  zstandard_ext.dart  zstandard_impl_native.dart  zstandard_impl_web.dart
zstandard/test/: tests_exist_elsewhere_test.dart
zstandard_android/: .gitignore  CHANGELOG.md  README.md  ffigen.yaml  pubspec.yaml
zstandard_android/android/: build.gradle  settings.gradle
zstandard_android/example/: README.md  pubspec.yaml
zstandard_android/example/lib/: main.dart
zstandard_android/lib/: zstandard_android.dart  zstandard_android_bindings_generated.dart  zstandard_ext.dart
zstandard_android/src/: CMakeLists.txt  zstandard_android.c
zstandard_cli/: .gitignore  CHANGELOG.md  README.md  ffigen.yaml  pubspec.yaml
zstandard_cli/builders/linux_arm/: CMakeLists.txt
zstandard_cli/builders/linux_x64/: CMakeLists.txt
zstandard_cli/builders/macos_arm/: CMakeLists.txt
zstandard_cli/builders/macos_intel/: CMakeLists.txt
zstandard_cli/builders/windows_arm/: CMakeLists.txt
zstandard_cli/example/: zstandard_cli_example.dart
zstandard_cli/lib/: zstandard_cli.dart
zstandard_cli/lib/src/: lib_loader.dart  zstandard_cli_base.dart  zstandard_cli_bindings_generated.dart  zstandard_compress.dart  zstandard_interface.dart
zstandard_cli/test/: zstandard_cli_test.dart
zstandard_cli/zstd/: build_zstd.bat
zstandard_ios/: .gitignore  CHANGELOG.md  README.md  ffigen.yaml  pubspec.yaml
zstandard_ios/example/: README.md  clean.sh  pubspec.yaml
zstandard_ios/ios/: zstandard_ios.podspec
zstandard_ios/lib/: zstandard_ext.dart  zstandard_ios.dart  zstandard_ios_bindings_generated.dart
zstandard_ios/src/: CMakeLists.txt  zstandard_ios.c
zstandard_ios_bbb/: README.md  pubspec.yaml
zstandard_ios_bbb/example/: README.md  pubspec.yaml
zstandard_ios_bbb/ios/: zstandard_ios_bbb.podspec
zstandard_ios_bbb/lib/: zstandard_ios_bbb.dart  zstandard_ios_bbb_method_channel.dart  zstandard_ios_bbb_platform_interface.dart
zstandard_ios_bbb/test/: zstandard_ios_bbb_method_channel_test.dart  zstandard_ios_bbb_test.dart
zstandard_linux/: .metadata  CHANGELOG.md  README.md  ffigen.yaml  pubspec.yaml
zstandard_linux/example/: README.md  pubspec.yaml
zstandard_linux/lib/: zstandard_ext.dart  zstandard_linux.dart  zstandard_linux_bindings_generated.dart  zstandard_linux_method_channel.dart  zstandard_linux_platform_interface.dart
zstandard_linux/linux/: CMakeLists.txt  zstandard_linux_plugin.cc  zstandard_linux_plugin_private.h
zstandard_linux/src/: CMakeLists.txt
zstandard_linux/test/: zstandard_linux_method_channel_test.dart  zstandard_linux_test.dart
zstandard_macos/: .gitignore  CHANGELOG.md  README.md  ffigen.yaml  pubspec.yaml
zstandard_macos/example/: README.md  pubspec.yaml
zstandard_macos/lib/: zstandard_ext.dart  zstandard_macos.dart  zstandard_macos_bindings_generated.dart  zstandard_macos_method_channel.dart
zstandard_macos/macos/: zstandard_macos.podspec
zstandard_macos/test/: zstandard_macos_method_channel_test.dart  zstandard_macos_test.dart
zstandard_macos_ffi/: README.md  ffigen.yaml  pubspec.yaml
zstandard_macos_ffi/example/: README.md  pubspec.yaml
zstandard_macos_ffi/lib/: zstandard_macos_ffi.dart  zstandard_macos_ffi_bindings_generated.dart
zstandard_macos_ffi/macos/: zstandard_macos_ffi.podspec
zstandard_macos_ffi/src/: CMakeLists.txt
zstandard_platform_interface/: .gitignore  CHANGELOG.md  README.md  pubspec.yaml
zstandard_platform_interface/lib/: zstandard_platform_interface.dart
zstandard_platform_interface/test/: zstandard_platform_interface_method_channel_test.dart  zstandard_platform_interface_test.dart
zstandard_web/: .gitignore  CHANGELOG.md  README.md  pubspec.yaml
zstandard_web/blob/: zstd.wasm
zstandard_web/example/: README.md  pubspec.yaml
zstandard_web/lib/: zstandard_ext.dart  zstandard_web.dart
zstandard_web/test/: tests_exist_elsewhere_test.dart  zstandard_web_js_compression_test.dart  zstandard_web_js_test.dart  zstandard_web_test.dart
zstandard_windows/: .gitignore  .metadata  CHANGELOG.md  README.md  ffigen.yaml  pubspec.yaml
zstandard_windows/container/: zstandard_windows_plugin_c_api.cpp
zstandard_windows/example/: README.md  pubspec.yaml
zstandard_windows/lib/: zstandard_ext.dart  zstandard_windows.dart  zstandard_windows_bindings_generated.dart
zstandard_windows/src/: CMakeLists.txt  zstandard_windows.c
zstandard_windows/test/: zstandard_windows_method_channel_test.dart  zstandard_windows_test.dart
zstandard_windows/windows/: CMakeLists.txt  zstandard_windows_plugin.cpp  zstandard_windows_plugin.h
(+82 files in other folders)
